--- a/public/tpl/modelspages/carousel.html.twig
+++ b/public/tpl/modelspages/carousel.html.twig
@@ -1,83 +1,83 @@
-<div id="header-defaut" class="container-fluid">
-    <div class="row">
-        <div class="col-12" id="titres">
-            <h1>cinéVore</h1>
-            <h2>le site référence des amoureux du cinéma</h2>
-        </div>
-    </div>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-            <li data-target="#myCarousel" data-slide-to="4"></li>
-            <li data-target="#myCarousel" data-slide-to="5"></li>
-            <li data-target="#myCarousel" data-slide-to="0"></li>
-
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="public/images/carousel/coco-csl.jpg" alt="extrait du film Coco">
-                <div class="carousel-caption d-none d-md-block">
-                    <h3>Coco</h3>
-                    <p>Pour un moment de détente en famille</p>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="public/images/carousel/shining-csl.jpg" alt="extrait du film the Shining">
-                <div class="carousel-caption">
-                    <h3>The Shining</h3>
-                    <p>Pour se faire peur</p>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="{{docRoot}}public/images/carousel/cinquieme-csl.jpg" alt="extrait du film Cinquième Element" style:background-image>
-                <div class="carousel-caption">
-                    <h3>Le Cinquième Elément</h3>
-                    <p>Pour partager un moment entre amis</p>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="public/images/carousel/interstellar-csl.jpg" alt="extrait du film Interstellar">
-                <div class="carousel-caption">
-                    <h3>Interstellar</h3>
-                    <p>Pour se retourner le cerveau</p>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="public/images/carousel/ligne-verte-csl.jpg" alt="extrait du film la Ligne Verte">
-                <div class="carousel-caption">
-                    <h3>La Ligne Verte</h3>
-                    <p>Pour un moment d'émotion</p>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img class="d-block w-100" src="public/images/carousel/odyssee-csl.jpg" alt="extrait du film 2001: l'Odyssee de l'Espace">
-                <div class="carousel-caption">
-                    <h3>2001 : L'Odyssée de l'Espace</h3>
-                    <p>Pour voir ou revoir les classiques du cinéma</p>
-                </div>
+<header class="container-fluid">
+    <div class="container">
+        <div class="row" id="rowtitre">
+            <div class="col-12" id="titres">
+                <h2>le site référence des amoureux du cinéma qui veulent...</h2>
             </div>
         </div>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-        <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+                <li data-target="#myCarousel" data-slide-to="5"></li>
+
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/coco1-csl.jpg" alt="extrait du film Coco">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Coco</h3>
+                        <p>... se détendre en famille</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/shining-csl.jpg" alt="extrait du film the Shining">
+                    <div class="carousel-caption">
+                        <h3>The Shining</h3>
+                        <p>... se faire peur</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="{{docRoot}}public/images/carousel/cinquieme-csl.jpg" alt="extrait du film Cinquième Element" style:background-image>
+                    <div class="carousel-caption">
+                        <h3>Le Cinquième élément</h3>
+                        <p>... partager un moment entre amis</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/interstellar-csl.jpg" alt="extrait du film Interstellar">
+                    <div class="carousel-caption">
+                        <h3>Interstellar</h3>
+                        <p>... se retourner le cerveau</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/ligne-verte-csl.jpg" alt="extrait du film la Ligne Verte">
+                    <div class="carousel-caption">
+                        <h3>La Ligne Verte</h3>
+                        <p>... vivre un moment d'émotion</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/odyssee-csl.jpg" alt="extrait du film 2001: l'Odyssee de l'Espace">
+                    <div class="carousel-caption">
+                        <h3>2001 : L'Odyssée de l'Espace</h3>
+                        <p>... voir ou revoir les classiques du cinéma</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
-</div>
+</header>
