--- a/public/tpl/modelspages/index.html.twig
+++ b/public/tpl/modelspages/index.html.twig
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
 <html lang="{{ siteLang }}" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>{{ sitetitle }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ docRoot }}public/css/core.css">
-  </head>
-  <body id="body" class="container-fluid">
+    <link rel="icon" href="{{ docRoot }}public/images/favicon.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="cinéVore" />
+    <meta property="og:url" content="https://www.cinéVore.com" />
+    <meta property="og:image" content="{{ docRoot }}public/images/popcorn.jpg" />
+    <meta property="og:image:width" content="250" />
+    <meta property="og:image:height" content="221" />
+    <meta property="og:site_name" content="cinéVore" />
+    <meta property="og:description" content="Site de référencement de films cinématographiques. Pour tous les goûts et tous les publics." />
+    <meta name=”twitter:card” content=”summary” />
+    <meta name=”twitter:site” content=”@cinéVore” />
+    <meta name=”twitter:title” content=”cinéVore” />
+    <meta name=”twitter:description” content=”Pour les amoureux du cinéma.Site de référencement de films.” />
+    <meta name=”twitter:image” content=”public/images/popcorn.jpg” />
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+    <link rel="stylesheet" href="{{ docRoot }}public/css/core.css">
+</head>
+
+<body id="body" class="container-fluid">
+    {% include 'modelspages/navbar.html.twig' ignore missing %}
     <header id="header" class="container-fluid">
-      {% include 'modelspages/navbar.html.twig' ignore missing %}
-      {% include 'modelspages/header.html.twig' ignore missing %}
+
+        {% include 'modelspages/carousel.html.twig' ignore missing %}
     </header>
 
+
     <main id="main" class="container-fluid">
-      {% block main %}{% endblock %}
+        {% block main %}{% endblock %}
     </main>
 
     <footer id="footer" class="container-fluid">
         {% include 'modelspages/footer.html.twig' ignore missing %}
     </footer>
 
-    <script src="{{ docRoot }}public/js/core.js">
-    </script>
+    <script src="{{ docRoot }}public/js/core.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
-  </body>
+</body>
+
 </html>
