--- a/public/tpl/modelspages/navbar.html.twig
+++ b/public/tpl/modelspages/navbar.html.twig
@@ -1,39 +1,77 @@
+<div class="container-fluid">
+    <div class="row">
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
 
+            <div class="col-2">
+                <a class="navbar-brand" href="#"><img src="{{ docRoot }} public/images/popcorn.png" width="200"></a>
+            </div>
+            <div class="col-4" id="titres">
+                <h1>cinéVore</h1>
 
-  <!--
+            </div>
+            <div class="col-4">
+                <form>
+                    <input id="placeholder" type="search" placeholder="&nbsp;&nbsp;&nbsp;rechercher un film...">
+                    <button class="btn" type="submit"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
+            <div class="col-2">
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Connecté en tant que <b>{{ compteId }}</b>
+          </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                {% if compteId == 'guest' %}
+                                <a class=" dropdown-item " href="connexion ">Connexion</a>
+                                <a class="dropdown-item " href="inscription ">Créer un compte</a> {% else %}
+                                <a class="dropdown-item " href="profil ">Mon compte</a>
+                                <a class="dropdown-item " href="deconnexion ">Déconnexion</a> {% endif %}
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+</div>
+<!--
     BARRE DE NAVIGATION
-  -->
-  <nav id="navbar" class="navbar navbar-light navbar-expand-lg bg-light fixed-top d-flex justify-content-between">
-    <a class="navbar-brand" href="./{{ docRoot }}"><img src="{{ sitelogo }}" alt="{{ sitetitle }} logo"></a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+<nav id="navbar " class="navbar navbar-light navbar-expand-lg bg-light fixed-top d-flex justify-content-between ">
+    <a class="navbar-brand " href="./{{ docRoot }} "><img src="{{ sitelogo }} " alt="{{ sitetitle }} logo "></a>
+
+    <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent " aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
+      <span class="navbar-toggler-icon "></span>
     </button>
 
     <form class="form-inline ">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <input class="form-control mr-sm-2 " type="search " placeholder="Search " aria-label="Search ">
+        <button class="btn btn-outline-success my-2 my-sm-0 " type="submit ">Search</button>
     </form>
 
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse " id="navbarSupportedContent ">
+        <ul class="navbar-nav mr-auto ">
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item dropdown ">
+                <a class="nav-link dropdown-toggle " href="# " id="navbarDropdown " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
             Logged as <b>{{ compteId }}</b>
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            {% if compteId == 'guest' %}
-              <a class="dropdown-item" href="connexion">login</a>
-              <a class="dropdown-item" href="inscription">create account</a>
-            {% else %}
-              <a class="dropdown-item" href="profil">Mon compte</a>
-              <a class="dropdown-item" href="deconnexion">Déconnexion</a>
-            {% endif %}
-            </div>
-          </li>
+                <div class="dropdown-menu " aria-labelledby="navbarDropdown ">
+                    {% if compteId == 'guest' %}
+                    <a class="dropdown-item " href="connexion ">login</a>
+                    <a class="dropdown-item " href="inscription ">create account</a> {% else %}
+                    <a class="dropdown-item " href="profil ">Mon compte</a>
+                    <a class="dropdown-item " href="deconnexion ">Déconnexion</a> {% endif %}
+                </div>
+            </li>
 
         </ul>
-      </div>
-    </nav>
+    </div>
+</nav>  -->
