--- a/public/tpl/home.html.twig
+++ b/public/tpl/home.html.twig
@@ -3,6 +3,25 @@
   {% block main %}
 
 
+
+
+
+    {% if films %}
+      <h2>A l'affiche</h2>
+      <div class="row">
+        {% for key,film in films %}
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <a href="home/film/{{film.id }}">
+              <h3> {{ film.titre }} </h3>
+              <img class="img-fluid" src="{{ docRoot }}public/images/{{ film.affiche }}.jpg">
+              <p> {{ film.genre }} </p>
+            </a>
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
+
+
     {% if genres %}
 
       <h2>Rechercher par thème</h2>
@@ -19,29 +38,11 @@
 
     {% endif %}
 
-
-
-    {% if films %}
-      <h2>A l'affiche</h2>
-      <div class="row">
-        {% for key,film in films %}
-          <div class="col-sm-12 col-md-6 col-lg-3">
-            <a href="home/film/{{film.id }}">
-              <h3> {{ film.titre }} </h3>
-              <img class="img-fluid" src="public/images/{{ film.affiches }}.jpg">
-              <p> {{ film.genre }} </p>
-            </a>
-          </div>
-        {% endfor %}
-      </div>
-    {% endif %}
-
-
     {% if film %}
 
       <div class="col-12">
         <h2> {{ film.titre }} </h2>
-        <img src="{{ docRoot }}public/images/{{ film.affiches }}.jpg">
+        <img src="{{ docRoot }}public/images/{{ film.affiche }}.jpg">
         <p> {{ film.description }} </p>
         <p> {{ film.genre }} </p>
       </div>
@@ -57,7 +58,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3">
               <a href="../film/{{ film.id }}">
                 <h3> {{ film.titre }} </h3>
-                <img src="{{ docRoot }}public/images/{{ film.affiches }}.jpg">
+                <img src="{{ docRoot }}public/images/{{ film.affiche }}.jpg">
                 <p> {{ film.genre }} </p>
               </a>
             </div>
