--- a/public/tpl/modelspages/navbar.html.twig
+++ b/public/tpl/modelspages/navbar.html.twig
@@ -6,7 +6,7 @@
 </button>
 
             <div class="col-2">
-                <a class="navbar-brand" href="#"><img src="{{ docRoot }} public/images/popcorn.png" width="200"></a>
+                <a class="navbar-brand" href="#"><img src="{{ docRoot }}public/images/popcorn.png" width="150"></a>
             </div>
             <div class="col-4" id="titres">
                 <h1>cinéVore</h1>
@@ -28,10 +28,10 @@
           </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 {% if compteId == 'guest' %}
-                                <a class=" dropdown-item " href="connexion ">Connexion</a>
-                                <a class="dropdown-item " href="inscription ">Créer un compte</a> {% else %}
-                                <a class="dropdown-item " href="profil ">Mon compte</a>
-                                <a class="dropdown-item " href="deconnexion ">Déconnexion</a> {% endif %}
+                                <a class=" dropdown-item " href="{{docRoot}}connexion ">Connexion</a>
+                                <a class="dropdown-item " href="{{docRoot}}inscription ">Créer un compte</a> {% else %}
+                                <a class="dropdown-item " href="{{docRoot}}profil ">Mon compte</a>
+                                <a class="dropdown-item " href="{{docRoot}}deconnexion ">Déconnexion</a> {% endif %}
                             </div>
                         </li>
                     </ul>
