Correction inclusion carousel

--- a/public/tpl/conditions.html.twig
+++ b/public/tpl/conditions.html.twig
@@ -1,3 +1,11 @@
+
+{% extends "modelspages/index.html.twig" %}
+
+{% block header %}
+{% endblock %}
+
+{% block main %}
+
 <p>Bonne visite sur notre site!</p>
 <p>L’utilisateur est responsable des commentaires et critiques qu’il adresse au site AlloCiné ; il est tenu au respect des dispositions légales et réglementaires en vigueur, en particulier celles qui répriment les abus de la liberté d’expression. Il veille
     à ce que ses commentaires et critiques ne comportent pas, notamment : de propos à caractère raciste, xénophobe, antisémite, homophobe, négationniste, pornographique, pédophile, pédopornographique, zoophile… de propos injurieux, irrespectueux, vulgaires,
@@ -42,3 +50,5 @@
     à la haine, qui attaquent ou rabaissent un groupe en raison de la race, l'origine ethnique, la religion, le handicap, le sexe, l'âge, le statut de vétéran ou l'identité sexuelle. Les vols, persécutions, menaces, harcèlements, le non-respect de la
     vie privée ou la divulgation de données personnelles d'autres membres ne seront pas tolérés. Toute personne surprise en train de commettre ces actes se verra définitivement exclue d’AlloCiné. Tout le monde déteste recevoir du spam. Ne créez pas de
     descriptions, tags, titres ou vignettes pouvant prêter à confusion pour attirer un plus grand nombre d'internautes. Vous n'avez pas le droit de publier de grandes quantités de contenus non ciblés, indésirables ou répétitifs.
+
+    {% endblock %}
