--- a/public/tpl/edit-profil.html.twig
+++ b/public/tpl/edit-profil.html.twig
@@ -1,4 +1,9 @@
 {% extends "modelspages/profil.html.twig" %}
+
+{% block header %}
+{% endblock %}
+
+
 {% block section %}
 
   <div class="container">
