--- a/public/tpl/edit-films.html.twig
+++ b/public/tpl/edit-films.html.twig
@@ -1,5 +1,8 @@
 {% extends "modelspages/profil.html.twig" %}
 
+{% block header %}
+{% endblock %}
+
 {% block section %}
 
   <section class="container">
