--- a/public/tpl/modelspages/navbar.html.twig
+++ b/public/tpl/modelspages/navbar.html.twig
@@ -6,7 +6,7 @@
 </button>
 
             <div class="col-2">
-                <a class="navbar-brand" href="#"><img src="{{ docRoot }}public/images/popcorn.png" width="150"></a>
+                <a class="navbar-brand" href="./{{docRoot}}"><img src="{{ docRoot }}public/images/popcorn.png" width="150"></a>
             </div>
             <div class="col-4" id="titres">
                 <h1>cinéVore</h1>
