--- a/public/tpl/modelspages/index.html.twig
+++ b/public/tpl/modelspages/index.html.twig
@@ -30,10 +30,11 @@
 
     {% include 'modelspages/navbar.html.twig' ignore missing %}
 
+
     <header id="header" class="container-fluid">
-    {% block header %}
+    {% if printHeader %}
       {% include 'modelspages/carousel.html.twig' ignore missing %}
-    {% endblock %}
+    {% endif %}
     </header>
 
 
