formulaire et intégration

--- a/public/tpl/mentions.html.twig
+++ b/public/tpl/mentions.html.twig
@@ -1,1 +1,10 @@
+{% extends "modelspages/index.html.twig" %}
+
+{% block header %}
+{% endblock %}
+
+{% block main %}
+
 <p>bla bla bla bla</p>
+
+{% endblock %}
