--- a/public/tpl/modelspages/navbar.html.twig
+++ b/public/tpl/modelspages/navbar.html.twig
@@ -30,7 +30,7 @@
                                 {% if compteId == 'guest' %}
                                 <a class=" dropdown-item " href="{{docRoot}}connexion ">Connexion</a>
                                 <a class="dropdown-item " href="{{docRoot}}inscription ">Créer un compte</a> {% else %}
-                                <a class="dropdown-item " href="{{docRoot}}profil ">Mon compte</a>
+                                <a class="dropdown-item " href="{{docRoot}}edit-profil ">Mon compte</a>
                                 <a class="dropdown-item " href="{{docRoot}}deconnexion ">Déconnexion</a> {% endif %}
                             </div>
                         </li>
