--- a/public/tpl/newsletter.html.twig
+++ b/public/tpl/newsletter.html.twig
@@ -1,1 +1,10 @@
 {% extends "modelspages/index.html.twig" %}
+
+{% block header %}
+{% endblock %}
+
+{% block main %}
+
+<p>newsletter</p>
+
+{% endblock %}
