--- a/public/tpl/modelspages/navbar.html.twig
+++ b/public/tpl/modelspages/navbar.html.twig
@@ -6,7 +6,7 @@
 </button>
 
             <div class="col-2">
-                <a class="navbar-brand" href="./{{docRoot}}"><img src="{{ docRoot }}public/images/popcorn.png" width="150"></a>
+                <a class="navbar-brand" href="./{{docRoot}}"><img src="./{{docRoot}}public/images/popcorn.png" width="150"></a>
             </div>
             <div class="col-4" id="titres">
                 <h1>cinéVore</h1>
@@ -27,7 +27,7 @@
             Connecté en tant que <b>{{ compteId }}</b>
           </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                {% if compteId == 'guest' %}
+                                {% if compteId == 'invité' %}
                                 <a class=" dropdown-item " href="{{docRoot}}connexion ">Connexion</a>
                                 <a class="dropdown-item " href="{{docRoot}}inscription ">Créer un compte</a> {% else %}
                                 <a class="dropdown-item " href="{{docRoot}}edit-profil ">Mon compte</a>
