Mise a jour edit twig files

--- a/public/tpl/edit-films.html.twig
+++ b/public/tpl/edit-films.html.twig
@@ -14,7 +14,7 @@
               <div class="row">
                 {% for key,film in listfilmssoumis %}
                   <div class="col-sm-12 col-md-6 col-lg-3">
-                    <a href="{{ docRoot }}edit-films/edit/{{film.id }}">
+                    <a href="{{ docRoot }}edit-films/Éditer/{{film.id }}">
                       <h3> {{ film.titre }} </h3>
                       <img class="img-fluid" src="{{ docRoot }}public/images/{{ film.affiche }}.jpg">
                       <p> {{ film.genre }} </p>
@@ -26,7 +26,7 @@
           {% endif %}
 
         <div class="col-sm-12 col-lg-6">
-            <h3>Je propose un film :</h3>
+            <h3> {{actionForm}} un film :</h3>
             <p>Tous les champs sont obligatoires</p>
             <form method="post" action="" enctype="multipart/form-data">
             <input type="varchar" name="hidden" value="{{ actionForm }}" hidden>
@@ -126,15 +126,24 @@
                 <textarea id="description" name="description"  minlength="10" maxlength="1000" required>{{ edititing.description }}</textarea><br>
 
                 <label>Insérez l'affiche du film</label><br>
-                {% if edititing.affiche  %}
-                  Actuelle : {{edititing.affiche}}.jpg<br>
-                  <img src="{{docRoot}}public/images/{{edititing.affiche}}.jpg" alt="" height="100" width="70"><br>
-                  <input type="varchar" name="affiche" hidden><br>
+
+                  Affiche actuelle : {{edititing.affiche}}.jpg<br>
+                  <div id="locales-pics">
+                      {% for affiche in listAffiche %}
+                        <label for="id-{{affiche}}">
+                          <img src="{{docRoot}}public/images/{{affiche}}.jpg" alt="{{affiche}}" width='50px' height='50px' />
+                        </label>
+                        {% if affiche == edititing.affiche %}
+                          <input type="radio" name="affiche" id="id-{{affiche}}" value="{{affiche}}" checked>
+                        {% else %}
+                          <input type="radio" name="affiche" id="id-{{affiche}}" value="{{affiche}}">
+                        {% endif %}
+                      {% endfor %}
+                  </div>
+
+                  Nouvelle affiche :
                   <input type="file" name="nouvelleaffiche" ><br>
-                {% else %}
-                  Envoyer :<br>
-                  <input type="file" name="nouvelleaffiche"><br>
-                {% endif %}
+
                 <hr>
                 <input type="submit" id="btn" value="Soumettre"> {% if msgerror is defined%} {{ msgerror }} {% endif %}
           </div>
