--- a/public/tpl/inscription.html.twig
+++ b/public/tpl/inscription.html.twig
@@ -3,7 +3,7 @@
 
   <div class="container">
       <div class="row">
-          <h2>INSCRIVEZ-VOUS</h2>
+          <h2>S'INSCRIRE</h2>
           <div class="col-12"></div>
           <ul>En créant votre espace personnel, vous pourrez :</ul>
           <!-- <li>commenter les films</li> -->
