--- a/public/tpl/modelspages/carousel.html.twig
+++ b/public/tpl/modelspages/carousel.html.twig
@@ -1,8 +1,8 @@
-<header class="container-fluid">
+
     <div class="container">
         <div class="row" id="rowtitre">
             <div class="col-12" id="titres">
-                <h2>le site référence des amoureux du cinéma qui veulent...</h2>
+                <h3>le site référence des amoureux du cinéma qui veulent...</h3>
             </div>
         </div>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -22,8 +22,8 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/coco1-csl.jpg" alt="extrait du film Coco">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3>Coco</h3>
+                    <div class="carousel-caption">
+                        <h2>Coco</h2>
                         <p>... se détendre en famille</p>
                     </div>
                 </div>
@@ -31,7 +31,7 @@
                 <div class="carousel-item">
                     <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/shining-csl.jpg" alt="extrait du film the Shining">
                     <div class="carousel-caption">
-                        <h3>The Shining</h3>
+                        <h2>The Shining</h2>
                         <p>... se faire peur</p>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                 <div class="carousel-item">
                     <img class="d-block w-100" src="{{docRoot}}public/images/carousel/cinquieme-csl.jpg" alt="extrait du film Cinquième Element" style:background-image>
                     <div class="carousel-caption">
-                        <h3>Le Cinquième élément</h3>
+                        <h2>Le Cinquième élément</h2>
                         <p>... partager un moment entre amis</p>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                 <div class="carousel-item">
                     <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/interstellar-csl.jpg" alt="extrait du film Interstellar">
                     <div class="carousel-caption">
-                        <h3>Interstellar</h3>
+                        <h2>Interstellar</h3>
                         <p>... se retourner le cerveau</p>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                 <div class="carousel-item">
                     <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/ligne-verte-csl.jpg" alt="extrait du film la Ligne Verte">
                     <div class="carousel-caption">
-                        <h3>La Ligne Verte</h3>
+                        <h2>La Ligne Verte</h2>
                         <p>... vivre un moment d'émotion</p>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                 <div class="carousel-item">
                     <img class="d-block w-100" src="{{ docRoot }}public/images/carousel/odyssee-csl.jpg" alt="extrait du film 2001: l'Odyssee de l'Espace">
                     <div class="carousel-caption">
-                        <h3>2001 : L'Odyssée de l'Espace</h3>
+                        <h2>2001 : L'Odyssée de l'Espace</h2>
                         <p>... voir ou revoir les classiques du cinéma</p>
                     </div>
                 </div>
@@ -80,4 +80,3 @@
             </a>
         </div>
     </div>
-</header>
